# matrix-client

./: README.md  package-lock.json  package.json
docs/: API_REFERENCE.md  BACKEND_DOCUMENTATION.md  FRONTEND_DOCUMENTATION.md  PROJECT_OVERVIEW.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  lib.rs  main.rs  messages.rs  rooms.rs  state.rs  sync_mod.rs  verification.rs
src/components/: ChatView.tsx  Login.tsx  RoomList.tsx  Sidebar.tsx  VerificationDialog.tsx  login-info.ts
src/services/: matrixService.ts
src/types/: index.ts
